[tool.poetry]
name = "su-logging"
version = "0.1.1"
description = "Logging for Stockholm University"
homepage = "https://github.com/stockholmuniversity/su-logging"
repository = "https://github.com/stockholmuniversity/su-logging"
readme = "README.md"
authors = ["Simon Lundström <simlu+github@su.se>"]
license = "BSD-3-Clause"
packages = [
    { include = "su" },
]

[tool.poetry.dependencies]
python = "^3.5"
logstash_formatter = { version = "^0.5.17", optional = true }

[tool.poetry.extras]
structured = ["logstash_formatter"]

[tool.poetry.dev-dependencies]
isort = "~4.3.21"
pylint = "~2.3.1"
yapf = "~0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
